k8s/preprod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-alpha
  namespace: alpha-demo-dev
spec:
  type: ClusterIP
  selector:
    app: app-alpha
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
